# agentic-tui

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  publish.yml
crates/server/: Cargo.toml
crates/server/src/: app.rs  config.rs  engine.rs  event.rs  http.rs  lib.rs  main.rs  orchestrator.rs  plan.rs  refine.rs  run.rs  run_store.rs  ui.rs  workspace.rs  worktree.rs
crates/server/tests/: http_api.rs  multi_repo.rs  run_manager.rs  run_resume.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/web/: Cargo.toml  Trunk.toml  index.html  input.css  package-lock.json  package.json  style.css
crates/web/src/: api.rs  components.rs  main.rs  ws.rs
crates/web/src/views/: dashboard.rs  mod.rs  new_run.rs  run.rs  workspaces.rs
docs/: design-brief-web-ui.md
docs/superpowers/plans/: 2026-07-08-agentic-orchestrator-workspace.md  2026-07-08-kanban-board.md  2026-07-08-tui-goal-input.md  2026-07-09-configurable-branches.md  2026-07-09-goal-refine.md  2026-07-09-multi-repo-runs.md  2026-07-09-multi-run-dashboard.md  2026-07-09-web-ui-phase1.md  2026-07-09-workspace-onboarding-wizard.md  2026-07-10-run-persistence-and-resume.md
docs/superpowers/specs/: 2026-07-08-agentic-orchestrator-workspace-design.md  2026-07-08-kanban-board-design.md  2026-07-08-tui-goal-input-design.md  2026-07-09-configurable-branches-design.md  2026-07-09-goal-refine-design.md  2026-07-09-multi-repo-runs-design.md  2026-07-09-multi-run-dashboard-design.md  2026-07-09-web-ui-phase1-design.md  2026-07-09-workspace-onboarding-wizard-design.md  2026-07-10-new-run-branch-and-language-design.md  2026-07-10-run-persistence-and-resume-design.md
e2e/: package.json  playwright.config.js
e2e/tests/: smoke.spec.js
src/: app.rs  config.rs  engine.rs  event.rs  main.rs  orchestrator.rs  plan.rs  refine.rs  ui.rs  workspace.rs  worktree.rs
