[package]
name = "agentic-tui"
version = "0.1.0"
edition = "2021"
description = "A Rust orchestrator with an embedded web UI that plans a goal into epics and drives worktree-isolated Claude Code sessions to implement, verify, and merge them."
license = "MIT"
repository = "https://github.com/BimaPangestu28/agentic-tui"
readme = "../../README.md"
keywords = ["orchestrator", "claude", "web", "agentic"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "fs", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
shared = { path = "../shared" }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
rust-embed = "8"
open = "5"
mime_guess = "2"

[dev-dependencies]
# `ServiceExt::oneshot` drives `router()` end to end in the HTTP API tests
# without binding a socket, so each test exercises real routing, extraction,
# and status codes against the same router the binary serves.
tower = { version = "0.5", features = ["util"] }

[lib]
name = "agentic_tui"
path = "src/lib.rs"

[[bin]]
name = "agentic-tui"
path = "src/main.rs"
