[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = "0.6"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "Window", "Location"] }
console_error_panic_hook = "0.1"
